Fixes minor alignment styles

--- a/script/css/style.css
+++ b/script/css/style.css
@@ -71,5 +71,5 @@ input[type="file"] {
   font-size: 10em !important;
 }
 #submitBtn{
-  visibility: hidden;
+  display: none;;
 }
